infrastructure/k8s/feed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
    spec:
      containers:
      - name: feed-service
        image: 991370224656.dkr.ecr.us-east-1.amazonaws.com/facebook-feed:latest
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /api/feed/actuator/health
            port: 8082
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/feed/actuator/health
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  selector:
    app: feed-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
