infrastructure/k8s/media-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
  labels:
    app: media-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: 991370224656.dkr.ecr.us-east-1.amazonaws.com/facebook-media:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  selector:
    app: media-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
