infrastructure/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: facebook-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: facebook-vs
spec:
  hosts:
  - "*"
  gateways:
  - facebook-gateway
  http:
  - match:
    - uri:
        prefix: /api/auth
    route:
    - destination:
        host: auth-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /api/user
    route:
    - destination:
        host: user-service
        port:
          number: 8081
  - match:
    - uri:
        prefix: /api/feed
    route:
    - destination:
        host: feed-service
        port:
          number: 8082
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
